# gametree

./: .dockerignore  .gitignore  Dockerfile  FRONTEND_UI_REWORK_PLAN.md  LICENSE  MIGRATION_PLAN.md  README.md  compose.yml  eslint.config.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: deploy.yml  node.js.yml
app/: customHttp.yml  package.json  vite.config.ts
app/src/: store.ts
backend/: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
backend/docker/: Dockerfile  docker-compose.yml
backend/docker/nginx/: default.conf
backend/scripts/: ingest_pgn.py
backend/src/gametree_api/: __init__.py  constants.py  db.py  main.py  pgn.py  service.py
backend/tests/: test_api.py  test_main_routes.py
backend/tests/fixtures/: test_data.pgn
frontend/: Dockerfile  README.md  eslint.config.cjs  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: eco.json
frontend/spec/: testUtils.tsx
frontend/src/: App.test.tsx  App.tsx  BaseBoard.tsx  Board.tsx  book.json  chess.ts  eco_nested.json  engine.ts  helpers.tsx  hooks.tsx  main.tsx  setupTests.ts  store.ts  storeMiddleware.ts  testUtils.tsx  worker.js  worker.ts
infra/: README.md
infra/api/: .terraform.lock.hcl  README.md  autoscaling.tf  backend.tf  data.tf  (+7 more)
scripts/: backend-build-image.sh  backend-deploy.sh  bootstrap.sh  deploy-frontend.sh
src/: App.css  App.test.tsx  App.tsx  chess.ts  main.css  main.tsx  store.ts  thunks.ts  types.d.ts  worker.ts
(+687 files in other folders)
